turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: not found: value j
      j = i;
      ^Turmite:22: error: not found: value j
  var x=rule(state)(j)(0)
                    ^Turmite:23: error: not found: value j
  var y=rule(state)(j)(1)
                    ^Turmite:24: error: not found: value j
  var z=rule(state)(j)(2)
                    ^